[project]
name = "FunctionTraceHTML"
version = "1.0"
authors = [
  { name="charlie-de-muis"},
]
description = "Traces which functions are called and transforms it to a color coded HTML file"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"